static/style.css
* {
    box-sizing: border-box;
}

body {
    display: flex;
    font-family: system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue;
    color: #000;
    width: 100svw;
    height: 100svh;
    padding: 0;
    margin: 0;
    line-height: 1rem;
}

#devices-list {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    position: absolute;
    top: 0;
    left: 0;
    max-width: 360px;
    width: 100%;
    margin: 1.5rem;
    background-color: #fff;
    border-radius: .75rem;
    z-index: 9999;
    max-height: 75%;
    overflow-y: auto;
    cursor: pointer;
}

#devices-list h1 {
    font-size: 2rem;
    font-weight: 600;
    padding: .25rem;
    line-height: normal;
    padding: 1rem 1rem .5rem;
    position: sticky;
    top: 0;
    background-color: rgba(255, 255, 255, .8);
    backdrop-filter: blur(20px);
}

#devices-list #devices {
    padding: 0 .75rem .75rem;
}

#devices-list .device {
    display: flex;
    flex-direction: row;
    gap: .5rem;
    border-radius: .65rem;
    align-items: center;
    padding: 0 1rem;
    transition: .2s ease-in-out opacity;
}

#devices-list .device.hidden {
    opacity: 0.5;
}

#devices-list .device img, #devices-list .device span, .device-marker span, .device-marker img {
    display: flex;
    align-items: center;
    justify-content: center;
    flex: 0 0 40px;
    width: 40px;
    height: 40px;
    padding: 2.5px;
    background: #fff;
    border-radius: 50%;
    box-shadow: 0 2px 15px rgba(0, 0, 0, .1);
    font-size: 1rem;
}

#devices-list .device div {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 1rem .5rem;
    border-radius: .65rem;
    gap: 0.25rem;
}

#devices-list .device:hover {
    background-color: #eaeaea;
}

#devices-list .device h3 {font-size: 1rem;}
#devices-list .device p {
    font-size: .85rem;
    font-weight: 300;
    color: gray;
}

#map {
    width: 100%;
    height: 100%;
}

